SID-93 Init page

--- a/angular.json
+++ b/angular.json
@@ -131,5 +131,8 @@
       }
     }
   },
-  "defaultProject": "terry-midi"
+  "defaultProject": "terry-midi",
+  "cli": {
+    "analytics": false
+  }
 }
